# yaml2instance

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: dummy.yaml  dummy_classes.py  dummy_classes2.py  test_main.py
yaml2instance/: main.py
