[tool.poetry]
name = "yaml2instance"
version = "0.1.0"
description = ""
authors = ["shuns0314 <shunsuke.naka0314@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.2"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.8.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
target-version = ["py37"]
exclude = '''
(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | dist
)
'''

[tool.isort]
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
